Fix icon alignment in slider

--- a/src/common/img/_index.scss
+++ b/src/common/img/_index.scss
@@ -1,18 +1,16 @@
 .vote-svg {
-    width: 9px !important;
-    height: 9px !important;
+    width: 8px !important;
+    max-height: 6px !important;
 }
   
 .slider-svg-up {
-    width: 12.5px !important;
-    height: 9px !important;
-    margin-top: -0.65px;
+    width: 12px !important;
+    max-height: 7px !important;
+    margin-bottom: 1px;
 }
   
 .slider-svg-down {
-    width: 13px !important;
-    height: 9px !important;
-    margin-top: 0.65px;
+    width: 12px !important;
+    max-height: 7px !important;
+    margin-top: 1px;
 }
-  
-  
